# gone-fishing

./: CLAUDE.md  next.config.ts  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx
app/editor/: layout.tsx  page.tsx
app/login/: page.tsx
app/register/: page.tsx
components/editor/: ColorPicker.tsx  EditorTabs.tsx  FishConfigEditor.tsx  FishSelector.tsx  FishSpriteEditor.tsx  FishSpritePreview.tsx  PixelCanvas.tsx  TextureEditor.tsx  TexturePreview.tsx  TileTypeSelector.tsx
components/game/: CanvasGameRenderer.tsx  GameCanvas.tsx  GameRenderer.tsx  InterpolatedPlayer.tsx  Player.tsx  TileMap.tsx
components/ui/: CatchModal.tsx  Chat.tsx  FishDisplay.tsx  GameHeader.tsx  Inventory.tsx  LoginForm.tsx  PlayerList.tsx  SceneSelector.tsx  ShopModal.tsx  Toast.tsx
data/: poles.ts  textures.json
data/fish/: ocean.yaml  pond.yaml  river.yaml  swamp.yaml
data/scenes/: ocean.json  pond.json  river.json  swamp.json
drizzle/: 0000_mute_slayback.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
lib/db/: assets.ts  index.ts  schema.ts
lib/fishSprites/: defaults.ts  registry.ts
lib/hooks/: useAnimateOnChange.ts  useAuthRedirect.ts  useButtonSound.ts  useInterpolatedPosition.ts  useKeyboard.ts  usePngTextures.ts  useScenes.ts  (+4 more)
persistence/: players.json
scripts/: migrate-from-json.ts
server/: ChatManager.ts  FishingSystem.ts  GameServer.ts  PlayerManager.ts  SceneManager.ts  SessionManager.ts  index.ts
store/: fishSpriteStore.ts  gameStore.ts  sceneStore.ts  textureStore.ts
wasm/png-generator/: Cargo.toml
wasm/png-generator/src/: lib.rs
(+26 files in other folders)
